--- a/.sanity-removal-backup-20260130-134308/package.json
+++ b/.sanity-removal-backup-20260130-134308/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "gsap": "^3.14.2",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "sanity": "^3.43.0",
+    "next-sanity": "^9.8.0",
+    "@sanity/client": "^6.15.11",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.43.0",
+    "gsap": "^3.14.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
