--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "next": "14.2.5",
     "react": "18.3.1",
