--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/validate-sitemap.mjs && next build",
     "start": "next start",
     "lint": "next lint",
     "magnets:build": "node scripts/build-magnets.mjs",
