feat(analytics): Implement Vercel/GTM and fix critical bugs
- Implements Vercel Analytics and Speed Insights for performance monitoring.
- Configures Google Tag Manager, AdSense, and Impact.com scripts.
- Fixes critical GSAP bug in CodeRain component that affected global animations.
- Corrects resize handling in CodeRain to prevent visual glitches.
- Cleans up character encoding and broken links in blog content and documentation.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "magnets:watch": "node scripts/watch-magnets.mjs"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "gray-matter": "^4.0.3",
     "gsap": "^3.14.2",
     "next": "14.2.5",
